# VoiceLab

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: AppState.h  VoiceLabApp.cpp  VoiceLabApp.h
src/services/: EnrolService.cpp  EntrolService.h  FeatureExtractionService.cpp  FeatureExtractionService.h  GmmTrainer.cpp  GmmTrainer.h  Scorer.cpp  Scorer.h
src/ui/: GlfwWindow.cpp  GlfwWindow.h  ImGuiLayer.cpp  ImGuiLayer.h  UiAction.h  UiActionBus.cpp  UiActionBus.h  UiSubscriptionPool.cpp  UiSubscriptionPool.h
src/ui/controllets/: UiActionController.cpp  UiActionController.h
src/ui/styles/: UiColors.h  UiComponentsBuilder.cpp  UiComponentsBuilder.h  UiTheme.cpp  UiTheme.h
src/ui/views/: EnrolmentView.cpp  EnrolmentView.h  FileDialog.cpp  FileDialog.h  MainWindowView.cpp  MainWindowView.h  VerificationView.cpp  VerificationView.h  VoiceScreenViewBase.cpp  VoiceScreenViewBase.h
src/utils/: utils.cpp  utils.h
